<resources>
    <string name="app_name">SafeDot - Family Safety &amp; Care</string>
    <string name="api_key">AIzaSyC29cndUdlygszkvzwyMpmnhwnAbUPRgZc</string>

    <string name="my_family">My Family</string>
    <string name="todo">TODO</string>
    <string name="wifi">WiFi</string>
    <string name="_223m">223M</string>
    <string name="_90">90%</string>
    <string name="_16_40">16:40</string>
    <string name="address">9th buildind, 2nd floor, maldiv road, manali 9th buildind, 2nd floor 9th buildind, 2nd floor,</string>
    <string name="name">Dharmin Tandel</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="guard">Guard</string>
    <string name="profile">Profile</string>
    <string name="default_web_client_id">226553764400-gec2lpohqqner80tavl9b8kabnbh5k2s.apps.googleusercontent.com</string>
    <string name="login_text">See where they are, know they\'re safe, always within your family\'s circle. \nLog in now to your SafeDot</string>
</resources>