<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_member"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_16dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="@dimen/dimen_16dp"
    android:layout_marginBottom="12dp"
    android:background="@color/colorBg"
    app:cardCornerRadius="@dimen/dimen_16dp"
    app:cardElevation="@dimen/dimen_8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_user"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardCornerRadius="45dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="@string/name"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/card_user"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/location"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:tint="@color/green" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/address"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_location"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_16_40"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/name" />

        <LinearLayout
            android:id="@+id/lin_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/shape_rounded_rect"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lin_distance"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/card_user"
            app:layout_constraintTop_toBottomOf="@id/card_user">

            <ImageView
                android:id="@+id/img_battery"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/battery"
                app:tint="@color/green" />

            <TextView
                android:id="@+id/battery_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_90"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/green"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/lin_wifi"
            app:layout_constraintStart_toEndOf="@id/lin_battery"
            app:layout_constraintTop_toBottomOf="@id/card_user"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/img_distance"
                android:layout_width="20dp"
                android:layout_height="24dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/distance"
                app:layout_constraintStart_toEndOf="@id/battery_percent"
                app:layout_constraintTop_toBottomOf="@id/img_user"
                app:tint="#b197dc" />

            <TextView
                android:id="@+id/distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_223m"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/img_battery"
                app:layout_constraintStart_toEndOf="@id/img_distance"
                app:layout_constraintTop_toTopOf="@id/img_battery" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/img_call"
            app:layout_constraintStart_toEndOf="@id/lin_distance"
            app:layout_constraintTop_toBottomOf="@id/card_user"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:id="@+id/img_wifi"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/wifi"
                app:layout_constraintStart_toEndOf="@id/distance_value"
                app:layout_constraintTop_toBottomOf="@id/img_user"
                app:tint="@color/green" />

            <TextView
                android:id="@+id/wifi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/wifi"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semibold"
                app:layout_constraintBottom_toBottomOf="@id/img_battery"
                app:layout_constraintStart_toEndOf="@id/img_wifi"
                app:layout_constraintTop_toTopOf="@id/img_battery" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_call"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_circle"
            android:contentDescription="@string/todo"
            android:padding="@dimen/dimen_8dp"
            android:src="@drawable/call"
            app:layout_constraintBottom_toBottomOf="@id/lin_battery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/lin_battery"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>